# kumie

./: .dockerignore  .gitmodules  Dockerfile.web  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml
.turbo/: config.json
apps/frontier/: package.json  tsconfig.json  tsup.config.ts
apps/frontier/src/: devcache.ts  index.ts  prisma.ts  types.ts  utils.ts
apps/frontier/src/runners/: runner.ts
apps/frontier/src/runners/anime/: gogoanime.ts
apps/frontier/src/runners/manga/: mangakakalot.ts
apps/mobile/lib/: main.dart
apps/storybook/: package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.vite.json
apps/storybook/.storybook/: main.ts  preview.ts
apps/storybook/stories/: BG.svelte
apps/storybook/stories/Theme/: Theme.stories.ts
apps/tauri/: package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/tauri/src/: App.svelte  Router.svelte  main.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: main.rs
apps/tauri/src/lib/stores/: theme.ts
apps/tauri/src/routes/: Index.svelte  Versions.svelte
apps/web/: .env.example  CHANGELOG.md  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
apps/web/src/: app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/models/: index.ts  utils.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  DesktopNav.svelte  MobileNav.svelte
apps/web/tests/: test.ts
assets/: Banner psd.psd  Logo psd.psd
(+22 files in other folders)
